# MyPBRT

./: CMakeLists.txt  README.md
Accelerator/: BVHAccel.cpp  BVHAccel.h
Camera/: Camera.cpp  Camera.h  orthographic.cpp  orthographic.h  perspective.cpp  perspective.h
Core/: FeimosRender.h  FrameBuffer.h  Geometry.hpp  Scene.cpp  Scene.h  Spectrum.cpp  Spectrum.h  Transform.cpp  Transform.h  interaction.cpp  interaction.h  primitive.cpp  primitive.h
Integrator/: DirectLightingIntegrator.cpp  DirectLightingIntegrator.h  Integrator.cpp  Integrator.h  PathIntegrator.cpp  PathIntegrator.h  WhittedIntegrator.cpp  WhittedIntegrator.h
Light/: DiffuseLight.cpp  DiffuseLight.h  Light.cpp  Light.h  LightDistrib.cpp  LightDistrib.h  PointLight.cpp  PointLight.h  SkyBoxLight.cpp  SkyBoxLight.h
MainGUI/: DataTreeWidget.cpp  DataTreeWidget.h  DebugText.hpp  DisplayWidget.cpp  DisplayWidget.h  IMAGraphicsView.cpp  InteractionDockWidget.cpp  InteractionDockWidget.h  MainWindow.cpp  MainWindow.h  RenderStatus.cpp  RenderStatus.h  RenderThread.cpp  RenderThread.h  main.cpp
Material/: Fresnel.cpp  Fresnel.h  Material.h  MatteMaterial.cpp  MatteMaterial.h  Mirror.cpp  Mirror.h  Reflection.cpp  Reflection.h
Sampler/: RNG.h  Sampler.cpp  Sampler.h  Sampling.cpp  Sampling.h  SobolMatrices.cpp  SobolMatrices.h  TimeClockRandom.h  clockRand.cpp  clockRand.h  halton.cpp  halton.h  lowdiscrepancy.cpp  lowdiscrepancy.h
Shape/: Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  plyRead.h
Texture/: ConstantTexture.cpp  ConstantTexture.h  Texture.cpp  Texture.h
